--- a/polybar/config
+++ b/polybar/config
@@ -79,7 +79,7 @@ font-2 = FontAwesome5Brands:style=Solid:pixelsize=10;3
 
 modules-left = i3
 modules-center = 
-modules-right = my_volume memory cpu temperature powermenu date 
+modules-right = my_volume my_wifi memory cpu temperature date 
 
 
 
@@ -103,6 +103,18 @@ tray-padding = 2
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+
+
+
+[module/my_wifi]
+format-prefix = " "
+type = custom/script
+tail = true
+label = %output%
+interval = 3
+exec = nmcli dev wifi | grep "*" | cut -d" " -f8
+
 
 
 
@@ -179,30 +191,50 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
+strip-wsnumbers = true
+
+ws-icon-0 = 1;1: 
+ws-icon-1 = 2;2: 
+ws-icon-2 = 3;3: 
+ws-icon-3 = 4;4
+ws-icon-4 = 5;5
+ws-icon-5 = 6;6
+ws-icon-6 = 7;7
+ws-icon-7 = 8;8
+ws-icon-8 = 9;9
+ws-icon-9 = 10;10: 
+
+
+# label-focused = %icon%
+# label-unfocused = %icon%
+# label-visible = %icon%
+# label-urgent = %icon%
+
+
 
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %icon%
 label-focused-background = ${module/bspwm.label-focused-background}
 ;label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %icon%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 ;label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %icon%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
@@ -405,10 +437,10 @@ animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
 [module/temperature]
-format-prefix = ""
+;format-prefix = ""
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 60
+warn-temperature = 80
 
 format = <ramp> <label>
 ;format-underline = #f50a4d
@@ -419,9 +451,11 @@ label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
