--- a/polybar/config
+++ b/polybar/config
@@ -109,11 +109,13 @@ cursor-scroll = ns-resize
 
 [module/my_wifi]
 format-prefix = " "
+; Changes the color of the icon
+;format-prefix-foreground = ${colors.foreground-alt}
 type = custom/script
 tail = true
 label = %output%
 interval = 3
-exec = nmcli dev wifi | grep "*" | cut -d" " -f8
+exec = ~/My_scripts/wifi.sh
 
 
 
@@ -125,7 +127,8 @@ type = custom/script
 tail = true
 label = %output%
 interval = 0.2
-exec = python /home/sadx/My_scripts/polybarVOL.py
+exec = /home/sadx/My_scripts/Volume.sh
+;exec = python /home/sadx/My_scripts/polybarVOL.py
 
 
 
@@ -281,7 +284,7 @@ card = intel_backlight
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+;format-prefix-foreground = ${colors.foreground-alt}
 
 ;format-underline = #ffb52a
 label = %percentage:2%%
@@ -290,7 +293,7 @@ label = %percentage:2%%
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+;format-prefix-foreground = ${colors.foreground-alt}
 ;format-underline = #4bffdc
 label = %percentage_used%%
 
@@ -456,7 +459,7 @@ ramp-1 = 
 ramp-2 = 
 ramp-3 = 
 ramp-4 = 
-ramp-foreground = ${colors.foreground-alt}
+;ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
