--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,3 +1,6 @@
+backend = "glx";
+glx-no-stencil = true;
+vsync = "opengl-swc";
 # Shadow
 shadow = true;
 no-dnd-shadow = true;
@@ -52,14 +55,14 @@ fade-out-step = 0.00;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender";
+#backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+#vsync = "none";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
