--- a/polybar/config
+++ b/polybar/config
@@ -31,7 +31,7 @@ background-alt = #444
 ;color for all text
 foreground = #99d6ff
 ;color for icons
-foreground-alt = #dfdfdf
+foreground-alt = #99d6ff
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
@@ -39,7 +39,7 @@ alert = #bd2c40
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 15
+height = 20
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -63,9 +63,9 @@ module-margin-right = 2
 
 
 
-font-0 = UbuntuMono-BI.ttf:pixelsize=11;3
-font-1 = FontAwesome5Free:style=Solid:pixelsize=10;3
-font-2 = FontAwesome5Brands:style=Solid:pixelsize=10;3
+font-0 = UbuntuMono-BI.ttf:pixelsize=15;3
+font-1 = FontAwesome5Free:style=Solid:pixelsize=15;3
+font-2 = FontAwesome5Brands:style=Solid:pixelsize=15;3
 
 
 
@@ -79,7 +79,7 @@ font-2 = FontAwesome5Brands:style=Solid:pixelsize=10;3
 
 modules-left = i3
 modules-center = 
-modules-right = my_volume my_wifi memory cpu temperature date 
+modules-right =  pulseaudio my_wifi battery memory cpu  date 
 
 
 
@@ -116,6 +116,7 @@ tail = true
 label = %output%
 interval = 3
 exec = ~/My_scripts/wifi.sh
+
 
 
 
@@ -358,17 +359,26 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
-label-muted-foreground = #666
+label-muted =  
+label-muted-foreground = #ff5555
+
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-0 = #99d6ff
+bar-volume-foreground-1 = #99d6ff
+bar-volume-foreground-2 = #99d6ff
+bar-volume-foreground-3 = #99d6ff
+bar-volume-foreground-4 = #99d6ff
+bar-volume-foreground-5 = #99d6ff
+bar-volume-foreground-6 = #99d6ff
+;bar-volume-width = 10
+;bar-volume-foreground-0 = #55aa55
+;bar-volume-foreground-1 = #55aa55
+;bar-volume-foreground-2 = #55aa55
+;bar-volume-foreground-3 = #55aa55
+;bar-volume-foreground-4 = #55aa55
+;bar-volume-foreground-5 = #f5a70a
+;bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
@@ -376,7 +386,7 @@ bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = #165884
 
 [module/alsa]
 type = internal/alsa
@@ -389,14 +399,15 @@ format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
-bar-volume-width = 10
+
+ bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
 bar-volume-foreground-2 = #55aa55
 bar-volume-foreground-3 = #55aa55
 bar-volume-foreground-4 = #55aa55
 bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-6 = #ff5555 
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
@@ -412,30 +423,36 @@ battery = BAT1
 adapter = ACAD
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging = <ramp-capacity> <label-charging>
+format-charging-underline = 
 
-format-discharging = <animation-discharging> <label-discharging>
+format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
 animation-discharging-foreground = ${colors.foreground-alt}
 animation-discharging-framerate = 750
 
