Compton config updated

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -2,7 +2,7 @@ backend = "glx";
 glx-no-stencil = true;
 vsync = "opengl-swc";
 # Shadow
-shadow = true;
+shadow = false;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
@@ -25,10 +25,10 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 0.5;
-inactive-opacity = 0.5;
-active-opacity = 0.5;
-frame-opacity = 0.7;
+menu-opacity = 1;
+inactive-opacity = 1;
+active-opacity = 1;
+frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
@@ -44,6 +44,11 @@ blur-background-exclude = [
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
+
+opacity-rule = [
+  "95:class_g = 'URxvt' && focused",
+  "80:class_g = 'URxvt' && !focused"
+];
 
 # Fading
 fading = false;
