--- a/polybar/config
+++ b/polybar/config
@@ -22,6 +22,8 @@
 ;font-4 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
 ;font-5 = "Font Awesome 5 Brands:pixelsize=8;1"
 
+# fix for overlapping tray in fullscreen mode i3wm
+fixed-center = false
 
 [colors]
 ;background = ${xrdb:color0:#222}
@@ -39,7 +41,7 @@ alert = #bd2c40
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 20
+height = 22
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -63,9 +65,10 @@ module-margin-right = 2
 
 
 
-font-0 = UbuntuMono-BI.ttf:pixelsize=15;3
-font-1 = FontAwesome5Free:style=Solid:pixelsize=15;3
-font-2 = FontAwesome5Brands:style=Solid:pixelsize=15;3
+# font-0 = "UbuntuMono-BI.ttf:pixelsize=15;3"
+font-0 = "/usr/share/fonts/robotoFont/Roboto-Thin.ttf:pixelsize=12;3"
+font-1 = "FontAwesome5Free:style=Solid:pixelsize=15;3"
+font-2 = "FontAwesome5Brands:style=Solid:pixelsize=15;3"
 
 
 
@@ -78,8 +81,8 @@ font-2 = FontAwesome5Brands:style=Solid:pixelsize=15;3
 
 
 modules-left = i3
-modules-center = 
-modules-right =  pulseaudio my_wifi battery memory cpu  date 
+modules-center =
+modules-right =  pulseaudio my_wifi battery memory cpu  bright date
 
 
 
@@ -104,23 +107,23 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+; Custom modules
 
-
+; Enables polybar on multiple monitors, requires script
+; Source: https://github.com/polybar/polybar/issues/763
+[bar/example]
+monitor = ${env:MONITOR:}
 
 [module/my_wifi]
 format-prefix = " "
 ; Changes the color of the icon
 ;format-prefix-foreground = ${colors.foreground-alt}
+format-padding = 2
 type = custom/script
 tail = true
 label = %output%
 interval = 3
 exec = ~/My_scripts/wifi.sh
-
-
-
-
-
 
 [module/my_volume]
 ;format-prefix = " "
@@ -131,9 +134,15 @@ interval = 0.2
 exec = /home/sadx/My_scripts/Volume.sh
 ;exec = python /home/sadx/My_scripts/polybarVOL.py
 
-
-
-
+;///////////////////////////////////////////////////////////
+[module/bright]
+type = custom/script
+tail = true
+label = %output%
+interval = 0.2
+exec = ~/My_scripts/polyBrightness.sh
+;exec = "xrandr --verbose | grep -i brightness | cut -f2 -d ' ' | head -n1"
+format-prefix = " "
 
 [module/xwindow]
 type = internal/xwindow
@@ -172,18 +181,18 @@ label-focused = %index%
 ;colors of workspaces 1,2,3....
 label-focused-background = #882fc2cc
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 4
 
 label-occupied = %index%
-label-occupied-padding = 2
+label-occupied-padding = 4
 
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 4
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 5
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -281,12 +290,13 @@ inherit = module/xbacklight
 type = internal/backlight
 card = intel_backlight
 
+
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = " "
 ;format-prefix-foreground = ${colors.foreground-alt}
-
+format-padding = 1
 ;format-underline = #ffb52a
 label = %percentage:2%%
 
@@ -295,6 +305,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 ;format-prefix-foreground = ${colors.foreground-alt}
+format-padding = 2
 ;format-underline = #4bffdc
 label = %percentage_used%%
 
@@ -422,7 +433,7 @@ type = internal/battery
 battery = BAT1
 adapter = ACAD
 full-at = 98
-
+format-padding = 1
 format-charging = <ramp-capacity> <label-charging>
 format-charging-underline = 
 
@@ -432,6 +443,8 @@ format-discharging-underline = ${self.format-charging-underline}
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
+
+
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
