Tmux prefix changed from C-a to C-p

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # Set prefix
-set-option -g prefix C-a
-unbind-key C-a
-bind-key C-a send-prefix
+set-option -g prefix C-p
+unbind-key C-p
+bind-key C-p send-prefix
 
 # Use Alt-hjkl keys to switch panes
 bind-key -n M-h select-pane -L
