Removes <Esc> delay when vim is used with tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,3 +46,6 @@ bind-key x kill-pane
 # split windows
 bind-key h split-window -h
 bind-key v split-window -v
+
+# remove <Esc> delay when using vim with tmux
+set -sg escape-time 0
