--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,3 +49,7 @@ bind-key v split-window -v
 
 # remove <Esc> delay when using vim with tmux
 set -sg escape-time 0
+# 256 colors in tmux
+set -g default-terminal rxvt-unicode-256color
+# fix for vim cursor shape
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
