Vi/m mode for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,3 +53,13 @@ set -sg escape-time 0
 set -g default-terminal rxvt-unicode-256color
 # fix for vim cursor shape
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
+# Vi/m mode for tmux
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi k                send-keys -X cursor-up
+bind-key -T copy-mode-vi j              send-keys -X cursor-down
+bind-key -T copy-mode-vi h              send-keys -X cursor-left
+bind-key -T copy-mode-vi l             send-keys -X cursor-right
+bind-key -T copy-mode-vi v             send-keys -X begin-selection
+# Copy to system clipboard
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -b"
